--- a/css/hamburgers.css
+++ b/css/hamburgers.css
@@ -6,7 +6,7 @@
  * @link https://github.com/jonsuh/hamburgers
  */
 .hamburger {
-  padding: 0px;
+  padding: 15px 15px;
   display: inline-block;
   cursor: pointer;
   transition-property: opacity, filter;
@@ -17,7 +17,7 @@
   text-transform: none;
   background-color: transparent;
   border: 0;
-  margin: auto;
+  margin: 0;
   overflow: visible; }
   .hamburger:hover {
     opacity: 0.7; }
@@ -38,7 +38,7 @@
 .hamburger-inner {
   display: block;
   top: 50%;
-  margin-top: -5px; }
+  margin-top: -2px; }
   .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
     width: 40px;
     height: 2.5px;
