--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,29 @@
 .row {
   background-color: #f6f6f6;
   font-family: "Montserrat", sans-serif;
+  overflow: hidden;
 }
 
 #logo {
-  width: 6em;
+  width: 13%;
 }
 
 #toggle {
   transform: scale 1.5;
-  width: 100px;
-  height: 100px;
-  position: fixed;
-  top: 10px;
-  right: 30px;
   z-index: 1;
+  position: absolute;
+  float: right;
+  align-items: center;
+  margin-left: 45%;
 }
 
 #menu {
   background-color: #f6f6f6;
   width: 100vw;
   height: 100vh;
-  position: fixed;
-  top: 0;
   right: -100vw;
   transition: all 0.3s;
+  position: fixed;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -48,11 +47,14 @@
   right: 0;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 960px) {
   #toggle {
     transform: scale(0.7);
-    top: -2.5%;
-    right: 10px;
+  }
+}
+@media (max-width: 720px) {
+  #toggle {
+    transform: scale(0.5);
   }
 }
 #intro {
@@ -111,7 +113,6 @@
 
 .scrolling {
   display: inline-block;
-  overflow: hidden;
   white-space: nowrap;
   display: inline-block;
   animation: scrolling 8s linear infinite;
