--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,33 @@
+@charset "UTF-8";
+#loading {
+  background-color: #3a61ab;
+  height: 100vh;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  z-index: 10000;
+}
+#loading img {
+  width: 20%;
+  opacity: 0;
+  animation: fadeInOut 2s ease-in-out infinite;
+}
+
+@keyframes fadeInOut {
+  0% {
+    opacity: 0; /* opacità al 100% inizio*/
+    transform: rotate(0deg);
+  }
+  50% {
+    opacity: 1; /* opacità al 50% a metà*/
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: 0; /* opacità al 100% fine*/
+  }
+}
 .row {
   background-color: #f6f6f6;
   font-family: "Montserrat", sans-serif;
@@ -5,16 +35,13 @@
 }
 
 #logo {
-  width: 7%;
+  width: 8%;
 }
 
 #toggle {
   transform: scale 1.5;
   z-index: 1;
-  position: absolute;
-  float: right;
-  margin-left: 45%;
-  width: 100%;
+  top: 0;
 }
 
 #menu {
@@ -27,6 +54,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  top: 0;
 }
 #menu ul li {
   list-style-type: none;
@@ -148,6 +176,10 @@
   color: #f6f6f6;
   background-image: url("cerchi.png");
   background-size: cover;
+}
+
+i {
+  scale: 1.3;
 }
 
 /*# sourceMappingURL=style.css.map */
