--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,37 @@
-$black: #151515;
 $p-font: 'Montserrat', sans-serif;
 $s-color: rgb(253, 223, 0);
 $white: #f6f6f6;
 $blue: #3a61ab;
+
+#loading{
+    background-color: $blue;
+    height:100vh;
+    position:fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    z-index: 10000;
+    img{
+        width:20%;
+        opacity: 0;
+        animation: fadeInOut 2s ease-in-out infinite;
+    }
+}
+
+@keyframes fadeInOut{
+    0%{
+        opacity: 0; /* opacità al 100% inizio*/
+        transform: rotate(0deg);
+      }
+      50% {
+        opacity: 1; /* opacità al 50% a metà*/
+      }
+      100%{
+        transform: rotate(360deg);
+        opacity: 0; /* opacità al 100% fine*/
+      }
+}
 
 .row{
     background-color: $white;
@@ -11,16 +40,14 @@ $blue: #3a61ab;
 }
 
 #logo{
-    width: 7%;
+    width: 8%;
 }
 
 #toggle{
     transform: scale (1.5);
     z-index: 1;
-    position: absolute;
-    float: right;
-    margin-left:45%;
-    width:100%;
+    top: 0;
+
 }
 
 #menu{
@@ -33,6 +60,7 @@ $blue: #3a61ab;
     display: flex;
     align-items: center;
     justify-content: center;
+    top: 0;
     ul{
         li{
             list-style-type: none;
@@ -155,4 +183,8 @@ $blue: #3a61ab;
     color: $white;
     background-image: url('cerchi.png');
     background-size: cover;
+}
+
+i{
+   scale: 1.3;
 }
