--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@ $blue: #3a61ab;
 #loading{
     background-color: $blue;
     height:100vh;
+    width:100%;
     position:fixed;
     display: flex;
     justify-content: center;
@@ -15,21 +16,21 @@ $blue: #3a61ab;
     img{
         width:20%;
         opacity: 0;
-        animation: fadeInOut 2s ease-in-out infinite;
+        animation: fade 2s ease-in-out infinite;
     }
 }
 
-@keyframes fadeInOut{
+@keyframes fade{
     0%{
-        opacity: 0; /* opacità al 100% inizio*/
+        opacity: 0; /* opacità all' inizio*/
         transform: rotate(0deg);
       }
       50% {
-        opacity: 1; /* opacità al 50% a metà*/
+        opacity: 1; /* opacità a metà animazione*/
       }
       100%{
         transform: rotate(360deg);
-        opacity: 0; /* opacità al 100% fine*/
+        opacity: 0; /* opacità alla fine*/
       }
 }
 
@@ -40,14 +41,16 @@ $blue: #3a61ab;
 }
 
 #logo{
-    width: 8%;
+    width: 9%;
+    &:hover{
+        opacity: 0.7;
+    }
 }
 
 #toggle{
     transform: scale (1.5);
     z-index: 1;
     top: 0;
-
 }
 
 #menu{
@@ -55,7 +58,7 @@ $blue: #3a61ab;
     width: 100vw;
     height: 100vh;
     right: -100vw;
-    transition: all .3s;
+    transition: all .5s;
     position:fixed;
     display: flex;
     align-items: center;
@@ -89,14 +92,17 @@ $blue: #3a61ab;
     }
 }
 
-@media (max-width: 720px) {
+@media (max-width: 760px) {
     #toggle{
-        transform: scale(0.5);
+        transform: scale(0.6);
+    }
+    #menu ul li a{
+        font-size: 3em;
     }
 }
 
 #intro {
-    background-image: url('sfondo3.png');
+    background-image: url('../img/sfondo3.png');
     background-color: $white;
     background-size: cover;
     background-position: right;
@@ -112,28 +118,44 @@ $blue: #3a61ab;
 
 #about{
     background-color: $blue;
-    background-image: url('cerchi.png');
+    background-image: url('../img/cerchi.png');
     background-repeat: no-repeat;
     background-position: right;
     h3{
         font-weight: 700;
         color: $white;
-        margin-left:20px;
     }
     img{
         width: 80%;
     }
     p{
         color: $white;
-        margin-left:20px;
+        font-size: 1em;
+    }
+}
+
+.add-text{
+    display: none; /*nascondi testo*/
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    margin: 0 1em 1em 1em;
+}
+
+.show-add-text{
+    display: block; /*mostra il testo aggiuntivo quando la classe .show-add-text è presente*/
+    opacity: 1;
+}
+
+#read-more-btn{
+    font-size: 1.2em;
+    &:hover{
+        color: $blue;
     }
 }
 
 #titpro h3{
     font-weight: 700;
     color: $blue;
-    margin-left:20px;
-    margin-bottom: 50px;
 }
 
 .card:hover{border: 5px $s-color solid; color: $s-color; cursor:pointer;}
@@ -149,9 +171,10 @@ $blue: #3a61ab;
     display: inline-block;
     white-space: nowrap;
     display: inline-block;
-    animation: scrolling 5s linear infinite;
+    animation: scrolling 10s linear infinite;
     background-color: $s-color;
     color: $blue;
+    padding: 0 5em 0 5em;
 }
   
 .message{
@@ -166,8 +189,14 @@ $blue: #3a61ab;
   transform: translate3d(0, 0, 0);
   }
   100% {
-  transform: translate3d(-42%, 0, 0);
+  transform: translate3d(-50%, 0, 0);
   }
+}
+
+@media (max-width:760px){
+    .message{
+        font-size: 4em;
+    }
 }
 
 #talk {
@@ -181,8 +210,12 @@ $blue: #3a61ab;
 #contact{
     background-color: $blue;
     color: $white;
-    background-image: url('cerchi.png');
+    background-image: url('../img/cerchi.png');
     background-size: cover;
+}
+
+#btn-sign:hover{
+    color: $blue;
 }
 
 i{
