--- a/css/hamburgers.css
+++ b/css/hamburgers.css
@@ -6,7 +6,7 @@
  * @link https://github.com/jonsuh/hamburgers
  */
 .hamburger {
-  padding: 15px 15px;
+  padding: 10px 15px;
   display: inline-block;
   cursor: pointer;
   transition-property: opacity, filter;
@@ -20,14 +20,15 @@
   margin: 0;
   overflow: visible; }
   .hamburger:hover {
-    opacity: 0.7; }
+    opacity: 0.7;}
   .hamburger.is-active:hover {
-    opacity: 0.7; }
+    opacity: 0.7;}
   .hamburger.is-active .hamburger-inner,
   .hamburger.is-active .hamburger-inner::before,
   .hamburger.is-active .hamburger-inner::after {
     background-color: rgb(253, 223, 0); 
-    height: 4px; }
+    height: 4px;
+  }
 
 .hamburger-box {
   width: 40px;
@@ -38,7 +39,7 @@
 .hamburger-inner {
   display: block;
   top: 50%;
-  margin-top: -2px; }
+  margin-top: 0px; }
   .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
     width: 40px;
     height: 2.5px;
